codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__sleep_status_countdown.snap
---
source: tui/src/chatwidget/tests/sleep_tests.rs
expression: "render_bottom_popup(&chat, 100)"
---
• Sleeping (1m 00s left • esc to interrupt)


› Ask Codex to do anything

  GPT-5.6-Sol default · /tmp/project
